# rvct_xr4fe_mrexample

./: README.md
varjo-sdk/: CHANGELOG.md  RUNTIME_CHANGELOG.md
varjo-sdk/docs/: _varjo_8h.html  _varjo_8h.js  _varjo_8h_source.html  _varjo__d3d11_8h.html  _varjo__d3d11_8h.js  _varjo__d3d11_8h_source.html  _varjo__d3d12_8h.html  _varjo__d3d12_8h.js  _varjo__d3d12_8h_source.html  _varjo__datastream_8h.html  _varjo__datastream_8h.js  _varjo__datastream_8h_source.html  _varjo__events_8h.html  _varjo__events_8h.js  _varjo__events_8h_source.html  _varjo__events_8h_structvarjo___event.js  _varjo__events_8h_structvarjo___event_button.js  _varjo__events_8h_structvarjo___event_data_stream_start.js  _varjo__events_8h_structvarjo___event_data_stream_stop.js  _varjo__events_8h_structvarjo___event_display_status.js  _varjo__events_8h_structvarjo___event_foreground.js  _varjo__events_8h_structvarjo___event_header.js  _varjo__events_8h_structvarjo___event_headset_standby_status.js  _varjo__events_8h_structvarjo___event_headset_status.js  _varjo__events_8h_structvarjo___event_m_r_camera_property_change.js  _varjo__events_8h_structvarjo___event_m_r_device_status.js  _varjo__events_8h_structvarjo___event_standby_status.js  _varjo__events_8h_structvarjo___event_texture_size_change.js  _varjo__events_8h_structvarjo___event_tracking_status.js  _varjo__events_8h_structvarjo___event_visibility.js  _varjo__events_8h_structvarjo___event_visibility_mesh_change.js  _varjo__events_8h_unionvarjo___event_data.js  _varjo__export_8h.html  _varjo__export_8h.js  _varjo__export_8h_source.html  _varjo__gl_8h.html  _varjo__gl_8h.js  _varjo__gl_8h_source.html  _varjo__layers_8h.html  _varjo__layers_8h.js  (+164 more)
varjo-sdk/docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  files_1.js  functions_0.js  pages_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_10.js  variables_11.js  variables_12.js  variables_13.js  variables_14.js  variables_15.js  variables_16.js  (+14 more)
varjo-sdk/examples/: CMakeLists.txt  CMakeSettings.json  README.txt
varjo-sdk/examples/Benchmark/: CMakeLists.txt
varjo-sdk/examples/Benchmark/shaders/: grid.frag  grid.vert  scene.frag.inc  scene.vert.inc  sceneNoVelocity.frag  sceneNoVelocity.vert  sceneVelocity.frag  sceneVelocity.vert  shaders.cmake  stencil.frag  stencil.vert  velocityConstants.inc  vrs.comp
varjo-sdk/examples/Benchmark/src/: Config.hpp  D3D11Renderer.cpp  D3D11Renderer.hpp  D3D12Renderer.cpp  D3D12Renderer.hpp  D3DShaders.cpp  D3DShaders.hpp  GLRenderer.cpp  GLRenderer.hpp  GazeTracking.cpp  GazeTracking.hpp  Geometry.cpp  Geometry.hpp  GeometryGenerator.cpp  GeometryGenerator.hpp  IRenderer.cpp  IRenderer.hpp  OpenVRTracker.cpp  OpenVRTracker.hpp  Profiler.hpp  VKRenderer.cpp  VKRenderer.hpp  VKShaders.hpp  VRSHelper.cpp  VRSHelper.hpp  Window.cpp  Window.hpp  main.cpp
varjo-sdk/examples/ChromaKeyExample/: CMakeLists.txt
varjo-sdk/examples/ChromaKeyExample/src/: main.cpp
varjo-sdk/examples/Common/: CameraManager.cpp  CameraManager.hpp  ChromaKeyManager.cpp  ChromaKeyManager.hpp  D3D11MultiLayerView.cpp  D3D11MultiLayerView.hpp  D3D11Renderer.cpp  D3D11Renderer.hpp  D3D11Shaders.cpp  D3D11Shaders.hpp  DataStreamer.cpp  DataStreamer.hpp  ExampleShaders.hpp  GfxContext.cpp  GfxContext.hpp  Globals.cpp  Globals.hpp  HeadlessView.cpp  HeadlessView.hpp  MarkerTracker.cpp  MarkerTracker.hpp  MultiLayerView.cpp  MultiLayerView.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Session.cpp  Session.hpp  SyncView.cpp  SyncView.hpp  UI.cpp  UI.hpp  Undistorter.cpp  Undistorter.hpp
varjo-sdk/examples/EyeCameraStreamExample/: CMakeLists.txt
varjo-sdk/examples/EyeCameraStreamExample/src/: EyeCameraStream.cpp  EyeCameraStream.hpp  FPSCalculator.cpp  FPSCalculator.hpp  IApplication.hpp  StreamingApplication.cpp  StreamingApplication.hpp  UIApplication.cpp  UIApplication.hpp  main.cpp
varjo-sdk/examples/GazeTrackingExample/: CMakeLists.txt
varjo-sdk/examples/GazeTrackingExample/src/: Application.cpp  Application.hpp  Console.hpp  CsvWriter.hpp  GazeTracking.cpp  GazeTracking.hpp  UI.cpp  UI.hpp  main.cpp
varjo-sdk/examples/MRExample/: CMakeLists.txt
varjo-sdk/examples/MRExample/src/: AppLogic.cpp  AppLogic.hpp  AppState.hpp  AppView.cpp  AppView.hpp  MRScene.cpp  MRScene.hpp  main.cpp
varjo-sdk/examples/MarkerExample/: CMakeLists.txt
varjo-sdk/examples/MarkerExample/src/: MarkerScene.cpp  MarkerScene.hpp  main.cpp  number_atlas_base64.hpp
varjo-sdk/examples/MaskingTool/: CMakeLists.txt
varjo-sdk/examples/MaskingTool/res/: maskingtool-presets.json
varjo-sdk/examples/MaskingTool/src/: AppLogic.cpp  AppLogic.hpp  AppState.hpp  AppView.cpp  AppView.hpp  MaskScene.cpp  MaskScene.hpp  Objects.cpp  Objects.hpp  Presets.cpp  Presets.hpp  main.cpp
varjo-sdk/examples/lib/: VarjoLib.lib
varjo-sdk/include/: Varjo.h  Varjo_d3d11.h  Varjo_d3d12.h  Varjo_datastream.h  Varjo_events.h  Varjo_export.h  Varjo_gl.h  Varjo_layers.h  Varjo_math.h  Varjo_mr.h  Varjo_types.h  Varjo_types_d3d11.h  Varjo_types_datastream.h  Varjo_types_gl.h  Varjo_types_layers.h  Varjo_types_mr.h  Varjo_types_vk.h  Varjo_types_world.h  Varjo_version_defines.h  Varjo_vk.h  Varjo_world.h
varjo-sdk/lib/: VarjoLib.lib
